Switch to processbuilder